--- a/package.json
+++ b/package.json
@@ -29,11 +29,16 @@
         "laravel-mix": "^6.0.49",
         "maska": "^3.2.0",
         "primevue": "^4.3.9",
+        "select2-vue": "^1.0.8",
+        "v-select2-component": "^0.4.7",
         "vue-bootstrap-slider": "^2.1.8",
         "vue-carousel": "^0.18.0",
+        "vue-dadata": "^3.0.2",
+        "vue-dadata-3": "^2.1.3",
         "vue-range-component": "^1.0.3",
         "vue-range-slider": "^0.6.0",
         "vue-router": "^4.5.1",
+        "vue-sweetalert2": "^5.0.11",
         "vue-tabz": "^1.2.0",
         "vue3-carousel": "^0.16.0"
     }
