--- a/package.json
+++ b/package.json
@@ -20,6 +20,10 @@
         "vue": "^3.5.21"
     },
     "dependencies": {
+        "@inertiajs/inertia": "^0.11.1",
+        "@inertiajs/inertia-vue3": "^0.6.0",
+        "@inertiajs/progress": "^0.2.7",
+        "@inertiajs/vue3": "^2.2.5",
         "@primeuix/themes": "^1.2.3",
         "@samwood/vue-carousel": "^0.1.98",
         "@vueform/plugin-mask": "^1.0.7",
